# pocket-financer-android

./: .gitignore  LICENSE  README.md  copilot-instructions.md  gradle.properties  gradlew  gradlew.bat  inject_sms.py  settings.gradle.kts  test_sms_examples.txt  window_dump.xml
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-13_144500-inference-api-audit-and-tests.md  2026-05-18_044530-device-agnostic-audit.md
android_mock_ui/: README.md  metadata.json
android_mock_ui/src/: App.tsx  data.ts  index.css
android_mock_ui/src/components/: AccountsScreen.tsx  HomeScreen.tsx  InsightsScreen.tsx  OnboardingFlow.tsx  SettingsScreen.tsx  TelemetryLogsViewer.tsx  TransactionsScreen.tsx
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pocketfinancer/: MainActivity.kt  PocketFinancerApp.kt
app/src/main/java/com/pocketfinancer/di/: AppModule.kt  HomeSyncModule.kt
app/src/main/java/com/pocketfinancer/ui/: PocketFinancerRoot.kt
app/src/main/java/com/pocketfinancer/ui/home/: HomeScreen.kt  HomeSyncDelegateImpl.kt  HomeSyncManager.kt  HomeViewModel.kt  SyncService.kt
app/src/main/java/com/pocketfinancer/ui/insights/: InsightsScreen.kt  InsightsViewModel.kt
app/src/main/java/com/pocketfinancer/ui/navigation/: Screen.kt
app/src/main/java/com/pocketfinancer/ui/onboarding/: OnboardingScreen.kt  OnboardingService.kt  OnboardingSyncManager.kt  OnboardingViewModel.kt
app/src/main/java/com/pocketfinancer/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/pocketfinancer/ui/theme/: AppTypography.kt  Color.kt  Theme.kt  Type.kt
app/src/main/java/com/pocketfinancer/ui/transactions/: TelemetryLogsViewer.kt  TransactionsScreen.kt  TransactionsViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
data/: build.gradle.kts
data/schemas/com.pocketfinancer.data.db.AppDatabase/: 1.json  2.json
data/src/main/java/com/pocketfinancer/data/db/: AppDatabase.kt  DatabaseModule.kt
data/src/main/java/com/pocketfinancer/data/model/: Account.kt  Transaction.kt
docs/: design_spec_typography_spacing.md  emulator_testing.md  tier3_inline_override_elimination.md  typography_m3_audit_2026-06-26.md
gradle/: libs.versions.toml
hardware/: build.gradle.kts
hardware/src/main/java/com/pocketfinancer/hardware/: DeviceCapabilities.kt  SlmSelector.kt
hardware/src/test/java/com/pocketfinancer/hardware/: DeviceCapabilitiesUnitTest.kt  SlmSelectorUnitTest.kt
inference/: build.gradle.kts
inference/src/main/assets/: few_shot_examples.json  sms_extraction.gbnf  system_prompt.txt
inference/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  log.h
inference/src/main/java/com/pocketfinancer/inference/: LlamaEngine.kt  ModelDownloader.kt
inference/src/test/java/com/pocketfinancer/inference/: LlamaEngineUnitTest.kt
pipeline/: build.gradle.kts
pipeline/src/main/java/com/pocketfinancer/pipeline/: ExtractionParser.kt  HomeSyncDelegate.kt  PipelineService.kt  PromptBuilder.kt  SmsFilterPipeline.kt  SmsNotificationHelper.kt  SmsParserWorker.kt
pipeline/src/test/java/com/pocketfinancer/pipeline/: ExtractionParserTest.kt  PipelineServiceTest.kt  PromptBuilderTest.kt  SmsFilterPipelineTest.kt
sms/: build.gradle.kts
sms/src/main/java/com/pocketfinancer/sms/: SmsReader.kt  SmsReceiver.kt  SmsRepository.kt
sms/src/test/java/com/pocketfinancer/sms/: SmsReaderUnitTest.kt  SmsRepositoryUnitTest.kt
(+9 files in other folders)
